# AkumaImageEffect

./: .gitignore  README.md  effect_engine.py  main.py  pyproject.toml  requirements.txt  setup.cfg
AkumaImageEffect/: effect_engine.py  main.py
AkumaImageEffect/effects/: core_effects.py
effects/: core_effects.py
examples/: basic_usage.py
