[metadata]
name = AkumaImageEffect
version = 0.1.0
author = Akumanomi1988
author_email = akumanomi1988@gmail.com
description = A Python package for applying image effects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akumanomi1988/AkumaImageEffect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pillow
    opencv-python
[options.packages.find]
where = src